# PhoenixDKIM

./: .gitignore  AUDIT-DAEMON.md  AUDIT-PROMPT-A-memory-safety.md  AUDIT-PROMPT-B-logic-security.md  AUDIT.md  CMAKE_AUDIT.md  CMakeLists.txt  FEATURES  INSTALL  KNOWNBUGS  LICENSE  PATCHES.md  PROMPT_WARNINGS  ProjectGuide  README.md  SCOPE.md  TEST_AUDIT.md  TODO.md  TRADEMARK_POLICY.md  phoenixdkim-tests-short-socket-path.patch  phoenixdkim.conf.sample  phoenixdkim.rpmlintrc  phoenixdkim.spec  useful_commands
additional-test-suite/: crosscheck-dkimpy.py  dkim-crosscheck.sh
ai/: PROMPT_CLANG_WARNINGS.md  PROMPT_CONVERSION_WARNINGS.md  PROMPT_WARNINGS  dkim2-readiness.md  modern-logging-initiative.md  strict-warnings.md  upstream-develop-audit--COPY-for-TODO.md  upstream-develop-audit.md
cmake/: CheckCryptoProvider.cmake  CheckSHA1Verify.cmake  Fuzzers.cmake  Hardening.cmake  Reproducible.cmake  Sanitizers.cmake  Valgrind.cmake  check-have-macros.sh  lsan-suppressions.txt  valgrind-wrapper.sh.in  valgrind.supp
contrib/: build-release.sh  deploy-release.sh  phoenixdkim.spec
debian/: changelog  conffiles  control  copyright  libopendkim-dev.install  libphoenixdkim-dev.install  libphoenixdkim0.install  libphoenixdkim0.symbols  miltertest.install  opendkim-keygen.install  opendkim-ng.install  opendkim-tools.install  rules  (+11 more)
libopendkim/: CMakeLists.txt  README.md  base64.c  build-config.h.cmake.in  dkim-cache.c  dkim-canon.c  dkim-canon.h  dkim-dns.c  dkim-internal.h  dkim-keys.c  dkim-keys.h  dkim-mailparse.c  dkim-report.c  dkim-tables.c  dkim-tables.h  dkim-test.c  dkim-test.h  dkim-types.h  dkim-util.c  dkim-util.h  dkim.c  dkim.h  opendkim.pc.cmake.in  util.c  util.h
libopendkim/tests/: CMakeLists.txt  Makefile.am  t-cleanup.c  t-conformance.c  t-setup.c  t-signperf-ed25519  t-signperf.c  t-test100.c  t-test101.c  t-test102.c  t-test103.c  t-test104.c  t-test105.c  t-test106.c  t-test107.c  t-test108.c  t-test109.c  t-test110.c  t-test111.c  t-test112.c  t-test113.c  t-test114.c  t-test115.c  t-test116.c  t-test117.c  t-test118.c  t-test119.c  t-test120.c  t-test121.c  t-test122.c  t-test123.c  t-test125.c  t-test126.c  t-test127.c  t-test128.c  t-test129.c  t-test130.c  t-test131.c  t-test132.c  t-test133.c  (+113 more)
libphoenixdkim/fuzz/: CMakeLists.txt  fuzz-dkim2.c  fuzz-process-set.c
libphoenixdkim/tests/: CMakeLists.txt  t-cleanup.c  t-conformance.c  t-dkim2-unit.c  t-dns-failures.c  t-setup.c  t-signperf.c  t-test100.c  t-test101.c  t-test102.c  t-test103.c  t-test104.c  t-test105.c  t-test106.c  t-test107.c  t-test108.c  t-test109.c  t-test110.c  t-test111.c  t-test112.c  t-test113.c  t-test114.c  t-test115.c  t-test116.c  t-test117.c  t-test118.c  t-test119.c  t-test120.c  t-test121.c  t-test122.c  t-test123.c  t-test125.c  t-test126.c  t-test127.c  t-test128.c  t-test129.c  t-test130.c  t-test131.c  t-test132.c  t-test133.c  (+116 more)
miltertest/: CMakeLists.txt  README.md  miltertest.8  miltertest.c
opendkim/: .gitignore  CMakeLists.txt  Makefile.am  README.md  build-version.h.cmake.in  config.c  config.h  opendkim-ar.c  opendkim-arf.c  opendkim-arf.h  opendkim-config.h  opendkim-crypto.c  opendkim-crypto.h  opendkim-db.c  opendkim-db.h  opendkim-dns.c  opendkim-dns.h  opendkim-genkey.8  opendkim-genkey.in  opendkim-genzone.8  opendkim-genzone.c  opendkim-lua.3  opendkim-lua.3.in  opendkim-lua.c  opendkim-lua.h  opendkim-spam.c  opendkim-testkey.8  opendkim-testkey.c  opendkim-testmsg.8  opendkim-testmsg.c  opendkim.8  opendkim.c  opendkim.conf.5  opendkim.conf.5.in  opendkim.conf.sample  opendkim.h  phoenixdkim-genkey.8  phoenixdkim-genzone.8  phoenixdkim-lua.3  phoenixdkim-testkey.8  (+6 more)
opendkim/tests/: CMakeLists.txt  README.md  t-conf-check.lua  t-conf-check2.lua  t-db-http.c  t-db-lua-http.c  t-db-parsers.c  t-db-redis.c  t-db-vault-sign.c  t-db-vault.c  t-dontsign.lua  t-lua-rbl.lua  t-lua-speed-lua.lua  t-lua-speed-nolua.lua  t-lua-verify-tests.lua  t-peer.lua  t-sign-atps.lua  t-sign-report.lua  t-sign-rs-lua.lua  t-sign-rs-mixconf.lua  t-sign-rs-mixconf.lua-setup  t-sign-rs-multiple.lua  t-sign-rs-tables-bad.lua  t-sign-rs-tables-token.lua  t-sign-rs-tables.lua  t-sign-rs.lua  t-sign-ss-all.lua  t-sign-ss-ltag.lua  t-sign-ss-macro-value-file.lua  t-sign-ss-macro-value.lua  t-sign-ss-macro.lua  t-sign-ss-replace.lua  t-sign-ss-x.lua  t-sign-ss.lua  t-verify-double-from.lua  t-verify-malformed.lua  t-verify-report.lua  t-verify-revoked.lua  t-verify-ss-ar-admd-less.conf  t-verify-ss-ar-admd-less.lua  (+10 more)
phoenixdkim/: CMakeLists.txt  README.md  autorespond.csh  build-version.h.cmake.in  config.c  phoenixdkim-ar.c  phoenixdkim-ar.h  phoenixdkim-arf.c  phoenixdkim-config.h  phoenixdkim-crypto.c  phoenixdkim-db.c  phoenixdkim-db.h  phoenixdkim-dkim2store.c  phoenixdkim-dkim2store.h  phoenixdkim-dns.c  phoenixdkim-dns.h  phoenixdkim-genkey.8  phoenixdkim-genkey.in  phoenixdkim-genzone.8  phoenixdkim-genzone.c  phoenixdkim-lua.3  phoenixdkim-lua.c  phoenixdkim-lua.h  phoenixdkim-stats.c  phoenixdkim-stats.h  phoenixdkim-testkey.8  phoenixdkim-testkey.c  phoenixdkim-testmsg.8  phoenixdkim-testmsg.c  phoenixdkim.8  phoenixdkim.c  phoenixdkim.conf.5  phoenixdkim.conf.sample  phoenixdkim.conf.simple-verify.in  phoenixdkim.conf.simple.in  phoenixdkim.h  test.c  test.h  util.c  util.h
phoenixdkim/tests/: .gitignore  CMakeLists.txt  t-conf-check  t-conf-check.lua  t-conf-check2.lua  t-db-http.c  t-db-lua-http.c  t-db-parsers.c  t-db-redis.c  t-db-vault-sign.c  t-db-vault.c  t-dkim2-modify  t-dkim2-modify.conf  t-dkim2-modify.lua  t-dkim2-resign  t-dkim2-resign.conf  t-dkim2-resign.lua  t-dkim2-sign  t-dkim2-sign.conf  t-dkim2-sign.lua  t-dkim2store.c  t-dontsign.lua  t-lua-rbl.lua  t-lua-rbl.lua-final  t-lua-speed-lua.lua  t-lua-speed-lua.lua-setup  t-lua-speed-nolua.lua  t-lua-verify-tests.lua  t-lua-verify-tests.lua-setup  t-peer.lua  t-sign-atps.lua  t-sign-lenient-algmismatch  t-sign-lenient-algmismatch.conf  t-sign-lenient-algmismatch.keys  t-sign-lenient-algmismatch.lua  t-sign-report.lua  t-sign-rs-lua.lua  t-sign-rs-lua.lua-setup  t-sign-rs-mixconf.lua  t-sign-rs-multiple.lua  (+44 more)
(+179 files in other folders)
